--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
           <img src="./images/National2.jpg" alt="" />
         </div>
       </div>
+      <div class="unlock">
+        <img src="./images/Unlock.png"/>
+      </div>
       <footer></footer>
     </div>
   </body>
