--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
       <div class="unlock">
         <img src="./images/Unlock.png"/>
       </div>
+
+      <div class="achiv"><img src="./images/Achievements.png" alt=""></div>
+      <div class="Footer1"><img src="./images/Frame16.png" alt=""></div>
       <footer></footer>
     </div>
   </body>
