--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <!--Header-->
       <header class="header">
         <div class="logo">
-          <img src="/images/Logo.png" />
+          <img src="./images/Logo.png" />
         </div>
         <!--Navbar-->
         <nav class="navbar">
