--- a/index.html
+++ b/index.html
@@ -74,20 +74,32 @@
         <p>Who is Nextcent suitable for?</p>
       </div>
 
-      <div class="card">
-        <div class="cards">
-          <img src="./images/Membership.png" alt="logo" />
+      <section class="membership-section">
+        <div class="membership-card">
+          <div class="icon">
+            👥
+          </div>
+          <h2>Membership Organisations</h2>
+          <p>Our membership management software provides full automation of membership renewals and payments</p>
         </div>
-        <div>
-          <img src="./images/National.png" alt="" />
+    
+        <div class="membership-card">
+          <div class="icon">
+            🏢
+          </div>
+          <h2>National <br> Associations</h2>
+          <p>Our membership management software provides full automation of membership renewals and payments</p>
         </div>
-        <div>
-          <img src="./images/National2.jpg" alt="" />
+    
+        <div class="membership-card">
+          <div class="icon3">
+            🤝
+          </div>
+          <h2>Clubs And <br> Groups</h2>
+          <p>Our membership management software provides full automation of membership renewals and payments</p>
         </div>
-      </div>
-      <div class="unlock">
-        <img src="./images/Unlock.png"/>
-      </div>
+      </section>
+
 
       <div class="achiv"><img src="./images/Achievements.png" alt=""></div>
       <div class="Footer1"><img src="./images/Frame16.png" alt=""></div>
